--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
   </head>
   <body>
     <div id="home-view" class="container">
-      <h1>Welcome to Fresh Start</h1>
-      <button class="btn" onclick="navigateTo('new-routine')">
-        Create New Routine
-      </button>
-    </div>
+        <h1>Welcome to Fresh Start</h1>
+        <button class="btn" onclick="navigateTo('new-routine')">
+          Create New Routine
+        </button>
+        <div id="routines-container"></div> <!-- Missing routines container -->
+      </div>
+
+    <div id="playing-view" class="container hidden">
+        <button type="button" class="btn back-btn" onclick="navigateTo('home')"></button>
+        <h1 id="playing-message"></h1>
+      </div>
 
     <div id="new-routine-view" class="container hidden">
       <button
@@ -26,30 +32,10 @@
         <label for="routine-name">Routine Name:</label>
         <input type="text" id="routine-name" placeholder="Enter routine name" />
         <br /><br />
-
-        <label for="routine-emoji">Choose an Emoji:</label>
-        <select id="routine-emoji">
-          <option value="😊">😊 Happy</option>
-          <option value="💪">💪 Strength</option>
-          <option value="🧘">🧘 Relax</option>
-          <option value="🎶">🎶 Music</option>
-          <option value="🍎">🍎 Health</option>
-          <option value="🚴">🚴 Exercise</option>
-          <option value="☕">☕ Coffee</option>
-        </select>
-        <br /><br />
-        <label for="routine-duration">Duration:</label>
-        <div id="routine-duration">
-          <input type="number" id="hours" placeholder="HH" min="0" max="99" />
-          <span>:</span>
-          <input type="number" id="minutes" placeholder="MM" min="0" max="59" />
-          <span>:</span>
-          <input type="number" id="seconds" placeholder="SS" min="0" max="59" />
-        </div>
-        <br /><br />
-      </form>
       <button id="add-task-btn" class="btn" type="button">Add Task</button>
+    </form>
       <div id="tasks-container"></div>
+      <button id="create-routine-btn" class="btn" type="button">Create Routine</button>
     </div>
   </body>
 </html>
