Things are centered at least

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="home-view" class="container">
       <h1 class="rethink-sans-header">My Routines</h1>
-      <button class="btn home-btn" onclick="navigateTo('new-routine')">
+      <button class="btn new-routine-btn" onclick="navigateTo('new-routine')">
         <span class="icon">+</span>
         <span class="btn-text">New Routine</span>
       </button>
