--- a/index.html
+++ b/index.html
@@ -22,17 +22,11 @@
     </div>
 
     <div id="new-routine-view" class="container hidden">
-      <button
-        type="button"
-        class="btn back-btn"
-        onclick="navigateTo('home')"
-      ></button>
+      <button type="button" class="btn back-btn" onclick="navigateTo('home')"></button>
       <input type="text" id="routine-name" placeholder="Enter routine name" />
       <button id="add-task-btn" class="btn" type="button">Add Task</button>
       <div id="tasks-container"></div>
-      <button id="create-routine-btn" class="btn" type="button">
-        Create Routine
-      </button>
+      <button id="create-routine-btn" class="btn" type="button">Create Routine</button>
     </div>
 
     <div id="playing-view" class="container hidden">
