Routine name as input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div id="new-routine-view" class="container hidden">
       <button type="button" class="btn back-btn" onclick="navigateTo('home')"></button>
-      <input type="text" id="routine-name" placeholder="Enter routine name" />
+      <input type="text" id="routine-name" placeholder="Routine name" autocomplete="off"/>
       <button id="add-task-btn" class="btn" type="button">Add Task</button>
       <div id="tasks-container"></div>
       <button id="create-routine-btn" class="btn" type="button">Create Routine</button>
