omg task addition and timer working!

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
           <option value="☕">☕ Coffee</option>
         </select>
         <input type="color" id="color-selector" value="#e0e0e0" />
-        <input type="text" id="duration-selector" placeholder="HH:MM:SS" />
+        <input type="number" id="minutes-selector" placeholder="Minutes" min="0" />
+        <input type="number" id="seconds-selector" placeholder="Seconds" min="0" max="59" />
         <button id="add-task-to-list" class="btn">Add</button>
       </div>
     </div>
