--- a/index.html
+++ b/index.html
@@ -39,21 +39,23 @@
       <button id="create-routine-btn" class="btn" type="button">
         Create Routine
       </button>
-      <div id="task-sheet" class="task-sheet show">
+      <div id="task-sheet" class="task-sheet hidden">
         <input type="text" id="task-name" placeholder="Task Name" />
         <select id="emoji-selector">
-          <option value="😊">😊 Happy</option>
-          <option value="💪">💪 Strength</option>
-          <option value="🧘">🧘 Relax</option>
-          <option value="🎶">🎶 Music</option>
-          <option value="🍎">🍎 Health</option>
-          <option value="🚴">🚴 Exercise</option>
-          <option value="☕">☕ Coffee</option>
+            <option value="😊">😊 Happy</option>
+            <option value="💪">💪 Strength</option>
+            <option value="🧘">🧘 Relax</option>
+            <option value="🎶">🎶 Music</option>
+            <option value="🍎">🍎 Health</option>
+            <option value="🚴">🚴 Exercise</option>
+            <option value="☕">☕ Coffee</option>
         </select>
         <input type="color" id="color-selector" value="#e0e0e0" />
         <input type="number" id="minutes-selector" placeholder="Minutes" min="0" />
         <input type="number" id="seconds-selector" placeholder="Seconds" min="0" max="59" />
         <button id="add-task-to-list" class="btn">Add</button>
+    </div>
+    
       </div>
     </div>
 
