--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
   </head>
   <body>
     <div id="home-view" class="container">
-      <h1 class="rethink-sans-header">My Routines</h1>
-      <button class="btn new-routine-btn" onclick="navigateTo('new-routine')">
-        <span class="icon">+</span>
-        <span class="btn-text">New Routine</span>
-      </button>
-      <div id="routines-container"></div>
-    </div>
+        <img id="home-image" src="hero.png" alt="Full screen image" />
+        <h1 class="rethink-sans-header">My Routines</h1>
+        <p class="subheader">Create a new routine to get started</p>
+        <button class="btn new-routine-btn" onclick="navigateTo('new-routine')">
+          <span class="icon">+</span>
+          <span class="btn-text">New Routine</span>
+        </button>
+        <div id="routines-container"></div>
+      </div>
 
     <div id="new-routine-view" class="container hidden">
       <button
