oops forgot to submit!

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <input
         type="text"
         id="routine-name"
-        placeholder="Routine name"
+        placeholder="✎ Routine name"
         autocomplete="off"
       />
       <button id="add-task-btn" class="btn add-task-btn" type="button">
@@ -44,8 +44,11 @@
       <button id="create-routine-btn" class="btn" type="button">
         Create Routine
       </button>
+
+      <div id="scrim" class="hidden"></div>
+      
       <div id="task-sheet" class="task-sheet hidden">
-        <input type="text" id="task-name" placeholder="Task Name" />
+        <input type="text" id="task-name" placeholder="✎ Task Name" />
         <select id="emoji-selector">
             <option value="😊">😊</option>
             <option value="💪">💪</option>
